[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/Gameplay.gd" type="Script" id=1]
[ext_resource path="res://scripts/Camera.gd" type="Script" id=2]
[ext_resource path="res://scripts/Shadow.gd" type="Script" id=3]
[ext_resource path="res://wall.tscn" type="PackedScene" id=4]
[ext_resource path="res://player.tscn" type="PackedScene" id=5]

[sub_resource type="Environment" id=1]
background_mode = 4

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0, 0, 0, 0.780392, 0, 0, 0, 0.913725 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )
width = 128

[sub_resource type="CanvasItemMaterial" id=4]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 0.5, 0.5 )

[sub_resource type="Animation" id=6]
resource_name = "game_start"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("shadow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("game/obstacles:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "greeting_blink"
length = 4.0
loop = true

[node name="root" type="Node2D"]
script = ExtResource( 1 )

[node name="environment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="camera" type="Sprite" parent="."]
position = Vector2( 320, 240 )
region_enabled = true
script = ExtResource( 2 )

[node name="shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 320, 240 )
rotation = -1.57079
scale = Vector2( 4.36585, 669.43 )
texture = SubResource( 3 )
script = ExtResource( 3 )

[node name="game" type="Node2D" parent="."]

[node name="obstacles" type="Node2D" parent="game"]
modulate = Color( 1, 1, 1, 0 )

[node name="walls" type="StaticBody2D" parent="game/obstacles"]

[node name="left" type="CollisionShape2D" parent="game/obstacles/walls"]
material = SubResource( 4 )
position = Vector2( -25, 240 )
scale = Vector2( 50, 580 )
shape = SubResource( 5 )

[node name="right" type="CollisionShape2D" parent="game/obstacles/walls"]
position = Vector2( 665, 240 )
scale = Vector2( 50, 580 )
shape = SubResource( 5 )

[node name="top" type="CollisionShape2D" parent="game/obstacles/walls"]
position = Vector2( 320, -25 )
scale = Vector2( 740, 50 )
shape = SubResource( 5 )

[node name="bottom" type="CollisionShape2D" parent="game/obstacles/walls"]
position = Vector2( 320, 505 )
scale = Vector2( 740, 50 )
shape = SubResource( 5 )

[node name="box1" parent="game/obstacles" instance=ExtResource( 4 )]
position = Vector2( 200, 240 )
scale = Vector2( 4.32, 4.6 )

[node name="box2" parent="game/obstacles" instance=ExtResource( 4 )]
position = Vector2( 429.587, 241.227 )
scale = Vector2( 4.32, 4.6 )

[node name="player" parent="game" instance=ExtResource( 5 )]

[node name="animation" type="AnimationPlayer" parent="."]
anims/game_start = SubResource( 6 )
anims/greeting_blink = SubResource( 7 )

[node name="HSlider" type="HSlider" parent="."]
margin_left = 108.0
margin_top = 398.0
margin_right = 540.0
margin_bottom = 420.0
max_value = 255.0

[connection signal="camera_frame" from="." to="camera" method="_on_root_camera_frame"]
[connection signal="camera_ready" from="." to="camera" method="_on_root_camera_ready"]
[connection signal="force" from="." to="game/player" method="_on_root_force"]
[connection signal="game_start" from="." to="shadow" method="_on_root_game_start"]
[connection signal="game_start" from="." to="game/player" method="_on_root_game_start"]
